-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.12.3
-
None
-
3
-
9223372036854775807
client hit LASSERT during umount
2019-11-12 21:52:38 [448715.770987] LustreError: 77914:0:(genops.c:1272:class_import_put()) ASSERTION( __v >= 0 && __v < 0x5a5a5a5a ) failed: value: 1515870810 2019-11-12 21:52:38 [448715.784703] LustreError: 77914:0:(genops.c:1272:class_import_put()) LBUG 2019-11-12 21:52:38 [448715.792294] Pid: 77914, comm: umount 4.18.0-80.11.2.el8_0.x86_64 #1 SMP Tue Sep 24 11:32:19 UT C 2019 2019-11-12 21:52:38 [448715.802973] Call Trace: 2019-11-12 21:52:38 [448715.806196] libcfs_call_trace+0x86/0xc0 [libcfs] 2019-11-12 21:52:38 [448715.811911] lbug_with_loc+0x43/0x80 [libcfs] 2019-11-12 21:52:38 [448715.817254] class_import_put+0x269/0x2a0 [obdclass] 2019-11-12 21:52:38 [448715.823259] osc_precleanup_common+0xad/0x270 [osc] 2019-11-12 21:52:38 [448715.829165] osc_precleanup+0x23/0xb0 [osc] 2019-11-12 21:52:38 [448715.834311] class_cleanup+0x341/0xb30 [obdclass] 2019-11-12 21:52:38 [448715.840026] class_process_config+0x4a3/0x2780 [obdclass] 2019-11-12 21:52:38 [448715.846514] class_manual_cleanup+0x44f/0x750 [obdclass] 2019-11-12 21:52:38 [448715.852899] lov_tgts_putref+0x5b5/0xa00 [lov] 2019-11-12 21:52:38 [448715.858311] lov_disconnect+0x9a/0x180 [lov] 2019-11-12 21:52:38 [448715.863532] obd_disconnect+0xef/0x2b0 [lustre] 2019-11-12 21:52:38 [448715.869047] ll_put_super+0x48d/0x7f0 [lustre] 2019-11-12 21:52:38 [448715.874459] generic_shutdown_super+0x6c/0x100 2019-11-12 21:52:38 [448715.879864] kill_anon_super+0xe/0x20 2019-11-12 21:52:38 [448715.884399] deactivate_locked_super+0x34/0x70 2019-11-12 21:52:38 [448715.889813] cleanup_mnt+0x3b/0x70 2019-11-12 21:52:38 [448715.894066] task_work_run+0x8a/0xb0 2019-11-12 21:52:38 [448715.898511] exit_to_usermode_loop+0xeb/0xf0 2019-11-12 21:52:38 [448715.903735] do_syscall_64+0x182/0x1b0 2019-11-12 21:52:38 [448715.908376] entry_SYSCALL_64_after_hwframe+0x65/0xca 2019-11-12 21:52:38 [448715.914471] 0xffffffffffffffff 2019-11-12 21:52:38 [448715.918428] Kernel panic - not syncing: LBUG 2019-11-12 21:52:38 [448715.923652] CPU: 54 PID: 77914 Comm: umount Tainted: G OE --------- -t - 4.18.0-8 0.11.2.el8_0.x86_64 #1